--- a/css/themes/turtle/bootstrap.css
+++ b/css/themes/turtle/bootstrap.css
@@ -1089,7 +1089,7 @@ body {
   font-size: 14px;
   line-height: 1.42857143;
   color: #c8c8c8;
-  background-color: linear-gradient(to left, #8b86a3, #322e40)
+  background:linear-gradient(to left, #8b86a3, #322e40);
 }
 input,
 button,
