--- a/css/themes/turtle/bootstrap.css
+++ b/css/themes/turtle/bootstrap.css
@@ -4503,7 +4503,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-color: #2b2e32;
 }
 .navbar-default .navbar-brand {
-  color: #c8c8c8;
+  color: #322e40;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
@@ -4525,7 +4525,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #ffffff;
-  background-color: #6f4ff5;
+  background-color: #322e40;
 }
 .navbar-default .navbar-nav > .disabled > a,
 .navbar-default .navbar-nav > .disabled > a:hover,
