nav color test 6

--- a/css/themes/turtle/bootstrap.css
+++ b/css/themes/turtle/bootstrap.css
@@ -6778,7 +6778,7 @@ button.close {
     background-color: #322e40;
 }
 .navbar-default .navbar-brand {
-    color: #322e40;
+    color: white;
 }
 
 .navbar-default .navbar-nav > li > a:hover {
